Add 1st jest test
